[project]
name = "Mira-py-devkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Lyon", email = "lyon@lyonyu.me"},
]
dependencies = [
    "boto3>=1.34.58",
    "requests>=2.31.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
