[project]
name = "mira-py-devkit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lyon", email = "lyon@lyonyu.me" }
]
dependencies = [
    "boto3>=1.34.60",
    "requests>=2.31.0",
]
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mira_py_devkit"]
